Layout Fix
- Fixed layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ img                                         { max-width: 100%; }
 ul, ol                                      { padding-left: 0; }
 a:hover                                     { text-decoration: none; }
 a:focus, a:active                           { border: none; outline: 0; }
+.container-fluid.fixed                      { max-width: 1100px; }
 .btn                                        { padding: 10px; border: none; border-radius: 0; }
 .btn-default                                { background-color: #9b9b9b; color: #fff; font-size: 12px; font-weight: 600; text-transform: uppercase; }
 .equal-height                               { display : -webkit-box; display : -webkit-flex; display : -ms-flexbox; display :flex; }
